<resources>
    <string name="app_name">Assessment Test Eratani</string>
    <string name="title_assessment_test">Assessment Test</string>
    <string name="lbl_word_search">Pencarian Kata</string>
    <string name="lbl_data_processing">Pemrosesan Data</string>
    <string name="lbl_animation">Animasi</string>
    <string name="lbl_api_calling">API Calling</string>
    <string name="lbl_enter_the_search_word">Masukkan kata yang dicari</string>
    <string name="lbl_case_sensitive">Case sensitive</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_single_string">Single String</string>
    <string name="lbl_array_of_strings">Array of Strings</string>
    <string name="lbl_result">Hasil</string>
    <string name="lbl_no_searches_yet">Belum ada pencarian.</string>
    <string name="lbl_tip">Tip: gunakan toggle untuk mengaktifkan pencarian case-sensitive.</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="add">Add</string>
    <string name="lbl_no_data">No data</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="btn_submit">Submit</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_status">Status</string>
    <string name="prompt_gender">Choose gender</string>
    <string name="prompt_status">Choose status</string>
    <string name="failed_create_user">Failed create user</string>
    <string name="failed_load_users">Failed load users</string>
    <string name="lbl_please_import_csv">Silakan impor CSV</string>
    <string name="lbl_search_product_name">Cari nama produk</string>
    <string name="lbl_import_csv">Import CSV</string>
    <string name="lbl_summary">Ringkasan</string>
    <string name="lbl_product">Produk</string>
    <string name="lbl_initial_stock_total">Total Stok Awal</string>
    <string name="lbl_total_sold">Total Terjual</string>
    <string name="lbl_total_remaining">Total Sisa</string>
    <string name="lbl_initial_stock">Stok Awal</string>
    <string name="lbl_sold_month">Terjual (bulan)</string>
    <string name="lbl_remaining_stock">Sisa Stok</string>
</resources>